slightly reducing font size in very small viewports to avoid overflow on contact page.

--- a/app/app.css
+++ b/app/app.css
@@ -412,6 +412,10 @@ input, label, textarea, p {
   letter-spacing: 0.03em;
   line-height: 1.5em;
   text-align: justify; }
+  @media screen and (max-width: 350px) {
+    input, label, textarea, p {
+      font-size: 1.1em;
+      letter-spacing: 0.02em; } }
 
 p {
   margin: 20px 0;
