--- a/app/components/scss/main.scss
+++ b/app/components/scss/main.scss
@@ -115,6 +115,11 @@ input, label, textarea, p {
     letter-spacing:0.03em;
     line-height:1.5em;
     text-align:justify;
+
+    @include mini {
+        font-size:1.1em;
+        letter-spacing:0.02em;
+    }
 }
 
 p {
